settings cropper fixed to new ui

--- a/static/css/details.css
+++ b/static/css/details.css
@@ -279,7 +279,6 @@
     font-weight: bold;
     font-size: 20px;
     color: #FF4F00;
-    letter-spacing: -2px;
 }
 
 
