--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -138,6 +138,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    max-height: 40vh;
 }
 
 .thin-block {
